internalservice/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: internalservice-deployment
  labels:
    app: internalservice
spec:
  replicas: 1
  selector:
    matchLabels:
      app: internalservicepod
  template:
    metadata:
      labels:
        app: internalservicepod
    spec:
      containers:
        - name: internalservicecontainer
          image: trueh3/internalservice:latest
          ports:
            - containerPort: 8081
