internalservice/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: internalservice-ingress
  namespace: default
spec:
  rules:
   - host: dashboard.com
     http:
       paths:
         - path: /
           pathType: Prefix
           backend:
             service:
               name: internalservice-service
               port:
                 number: 8081
